--- a/deno.json
+++ b/deno.json
@@ -6,15 +6,8 @@
     "serve": "deno task build && deno task server:start"
   },
   "imports": {
-    "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.0",
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
-    "@std/assert": "jsr:@std/assert@1",
-    "@types/react": "npm:@types/react@^18.3.12",
-    "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.3",
-    "react": "npm:react@^18.3.1",
-    "react-dom": "npm:react-dom@^18.3.1",
-    "react-router-dom": "npm:react-router-dom@^6.28.0",
-    "vite": "npm:vite@^5.4.11"
+    "@std/assert": "jsr:@std/assert@1"
   },
   "compilerOptions": {
     "types": [
